[package]
name = "breez-liquid-cli"
edition = "2021"
version = "0.3.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bip39 = "2.0.0"
breez-sdk-liquid = { path = "../lib/core" }
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.20"
qrcode-rs = { version = "0.1", default-features = false }
rustyline = { version = "15.0.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1", features = ["macros"] }

[patch.crates-io]
# https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits and rebased on secp256k1-zkp 0.11.0
secp256k1-zkp = { git = "https://github.com/dangeross/rust-secp256k1-zkp.git", rev = "57d29b15269ca2ce3c3b118b6a72b66c1169e7b1" }
