[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[profile.frb]
inherits = "release"
strip = true      # Automatically strip symbols from the binary.
opt-level = 3
lto = "thin"
debug = 0
split-debuginfo = "unpacked"
incremental = false

[profile.frb-min]
inherits = "frb"
opt-level = "z"   # Optimize for size.
lto = true

[workspace]
members = ["bindings", "bindings/langs/react-native", "core", "wasm"]
resolver = "2"

[workspace.package]
version = "0.7.2-dev1"

[workspace.lints.clippy]
empty_line_after_doc_comments = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[workspace.dependencies]
anyhow = "1.0"
log = "0.4.20"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "223002e47a3b1be8306f68e9b8094ee2884c9568", features = ["liquid"] }
sdk-macros = { git = "https://github.com/breez/breez-sdk", rev = "223002e47a3b1be8306f68e9b8094ee2884c9568" }
thiserror = "1.0"

[patch.crates-io]
# https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits and rebased on secp256k1-zkp 0.11.0
secp256k1-zkp = { git = "https://github.com/breez/rust-secp256k1-zkp.git", rev = "eac2e479255a6e32b5588bc25ee53c642fdd8395" }
