[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace]
members = ["bindings", "bindings/langs/react-native", "core", "wasm"]
resolver = "2"

[workspace.package]
version = "0.11.5"

[workspace.lints.clippy]
empty_line_after_doc_comments = "allow"

[workspace.dependencies]
anyhow = "1.0"
log = "0.4.20"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "5d96541a4cb03f30b8c4197a619ea52a98bc0bfe", features = ["liquid"] }
sdk-macros = { git = "https://github.com/breez/breez-sdk", rev = "5d96541a4cb03f30b8c4197a619ea52a98bc0bfe" }
thiserror = "1.0"

[patch.crates-io]
# https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits and rebased on secp256k1-zkp 0.11.0
secp256k1-zkp = { git = "https://github.com/breez/rust-secp256k1-zkp.git", rev = "eac2e479255a6e32b5588bc25ee53c642fdd8395" }
