[package]
name = "breez-sdk-liquid-bindings"
edition = "2021"
version.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "breez_sdk_liquid_bindings"
crate-type = ["staticlib", "cdylib", "lib"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
breez-sdk-liquid = { path = "../core" }
breez-sdk-liquid-nwc = { path = "../plugins/nwc" }
log = { workspace = true }
uniffi = { package = "uniffi", version = "0.28.0", features = [ "bindgen-tests", "cli" ] }
uniffi_bindgen = { package = "uniffi_bindgen", version = "0.28.0" }
camino = "1.1.1"
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt"] }
once_cell = { workspace = true }
sdk-common = { workspace = true }
sdk-macros = { workspace = true }
async-trait = "0.1.86"

[build-dependencies]
uniffi = { package = "uniffi", version = "0.28.0", features = [ "build" ] }
glob = "0.3.1"
