[package]
name = "breez-sdk-liquid"
edition = "2021"
version.workspace = true

[lib]
name = "breez_sdk_liquid"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["frb"]
frb = ["dep:flutter_rust_bridge"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bip39 = "2.0.0"
chrono = "0.4"
env_logger = "0.11"
flutter_rust_bridge = { version = "=2.7.0", features = [
    "chrono",
], optional = true }
log = { workspace = true }
lwk_common = "0.7.0"
lwk_signer = { version = "0.7.0", default-features = false }
# lwk_wollet = { version = "0.7.0", default-features = false, features = [
#     "esplora_wasm",
# ] }
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
rusqlite_migration = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.25"
strum_macros = "0.25"
thiserror = { workspace = true }
url = "2.5.0"
futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
async-trait = "0.1.80"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "blocking",
    "rustls-tls",
] }
zbase32 = "0.1.2"
x509-parser = { version = "0.16.0" }
tempfile = "3"
prost = "0.13.3"
semver = "1.0.23"
lazy_static = "1.5.0"
ecies = { version = "0.2.7", default-features = false, features = [
    "pure",
    "std",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
electrum-client = { version = "0.19.0" }
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", branch = "trunk" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }
sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "f3256140944e52eb10e80608be804a0e43084c35", features = [
    "liquid",
] }
lwk_wollet = { git = "https://github.com/dangeross/lwk", default-features = true, branch = "savage-full-scan-to-index" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
lwk_wollet = { git = "https://github.com/dangeross/lwk", default-features = false, branch = "savage-full-scan-to-index", features = [
    "esplora_wasm",
] }

[dev-dependencies]
paste = "1.0.15"
tempdir = "0.3.7"
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
glob = "0.3.1"
tonic-build = "0.12.3"

# Pin these versions to fix iOS build issues
[target.'cfg(target_os = "ios")'.build-dependencies]
security-framework = "=2.10.0"
security-framework-sys = "=2.10.0"
