[package]
name = "breez-sdk-liquid"
edition = "2021"
version.workspace = true

[lib]
name = "breez_sdk_liquid"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["frb"]
frb = ["dep:flutter_rust_bridge"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bip39 = "2.0.0"
chrono = "0.4"
derivative = "2.2.0"
env_logger = "0.11"
flutter_rust_bridge = { version = "=2.8.0", features = [
    "chrono",
], optional = true }
log = { workspace = true }
lwk_common = "0.8.0"
lwk_signer = { version = "0.8.0", default-features = false }
rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7ea0999b59432deb4a07f220", features = [ "backup", "bundled" ] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
# TODO: Change on top of main once PR is merged
sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "19ed955c6fa854ad6cd2beb2eca9127d8099c506", features = ["liquid"] }
rusqlite_migration =  { git = "https://github.com/hydra-yse/rusqlite_migration", branch = "rusqlite-v0.33.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.25"
strum_macros = "0.25"
thiserror = { workspace = true }
url = "2.5.0"
futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
async-trait = "0.1.86"
hex = "0.4"
reqwest = { version = "0.12", features = [ "json" ] }
zbase32 = "0.1.2"
x509-parser = { version = "0.16.0" }
tempfile = "3"
prost = "0.13.3"
ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
semver = "1.0.23"
lazy_static = "1.5.0"
esplora-client = { git = "https://github.com/hydra-yse/rust-esplora-client", branch = "scripthash-utxo", features = [
    "async-https-rustls"
] }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
electrum-client = { version = "0.21.0", default-features = false, features = [
    "use-rustls-ring",
    "proxy",
] }
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "12c9e546f15706b563ba7e49f2be7e8a5e7ada90" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }
uuid = { version = "1.8.0", features = ["v4"] }
lwk_wollet = { git = "https://github.com/breez/lwk", rev = "9e256839c26e47378c21c373d1376aa87802663a" }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
lwk_wollet = { git = "https://github.com/breez/lwk", rev = "9e256839c26e47378c21c373d1376aa87802663a", default-features = false, features = [ "esplora" ] }

[dev-dependencies]
paste = "1.0.15"
tempdir = "0.3.7"

[build-dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
glob = "0.3.1"
tonic-build = "0.12.3"

# Pin these versions to fix iOS build issues
[target.'cfg(target_os = "ios")'.build-dependencies]
security-framework = "=2.10.0"
security-framework-sys = "=2.10.0"
