[package]
name = "breez-sdk-liquid"
edition = "2021"
version.workspace = true

[lib]
name = "breez_sdk_liquid"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["frb"]
frb = ["dep:flutter_rust_bridge"]
regtest = []                           # Enable regtest tests
browser-tests = []                     # Enable browser wasm-pack tests
test-utils = ["sdk-common/test-utils"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bip39 = "2.0.0"
chrono = "0.4"
derivative = "2.2.0"
env_logger = "0.11"
flutter_rust_bridge = { version = "=2.9.0", features = [
    "chrono",
], optional = true }
log = { workspace = true }
lwk_common = "0.9.0"
lwk_signer = { version = "0.9.0", default-features = false }
mockall = "0.13.1"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
tokio_with_wasm = { version = "=0.8.2", features = [
    "macros",
    "rt",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
sdk-common = { workspace = true }
sdk-macros = { workspace = true }
rusqlite_migration = { git = "https://github.com/hydra-yse/rusqlite_migration", branch = "rusqlite-v0.33.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.25"
strum_macros = "0.25"
thiserror = { workspace = true }
url = "2.5.0"
futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
web-time = "1.1.0"
async-trait = "0.1.86"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
zbase32 = "0.1.2"
x509-parser = { version = "0.16.0" }
tempfile = "3"
ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
semver = "1.0.23"
lazy_static = "1.5.0"
esplora-client = { git = "https://github.com/hydra-yse/rust-esplora-client", branch = "scripthash-utxo", features = [
    "async-https-rustls",
] }

# Non-Wasm dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
electrum-client = { version = "0.21.0", default-features = false, features = [
    "use-rustls-ring",
    "proxy",
] }
lwk_wollet = { git = "https://github.com/breez/lwk", rev = "663ec5531b6be617eee3836e0f2c988d56f60acb" }
maybe-sync = { version = "0.1.1", features = ["sync"] }
prost = "^0.11"
tonic = { version = "^0.8", features = ["tls", "tls-webpki-roots"] }
uuid = { version = "1.8.0", features = ["v4"] }
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "a51930a211110623f8354842d2ea1a961c598a79", features = [
    "electrum",
    "ws",
] }
rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7ea0999b59432deb4a07f220", features = [
    "backup",
    "bundled",
] }

# Wasm dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
console_log = "1"
lwk_wollet = { git = "https://github.com/breez/lwk", rev = "663ec5531b6be617eee3836e0f2c988d56f60acb", default-features = false, features = [
    "esplora",
] }
maybe-sync = "0.1.1"
prost = "^0.13"
uuid = { version = "1.8.0", features = ["v4", "js"] }
tonic = { version = "0.12", default-features = false, features = [
    "codegen",
    "prost",
] }
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "a51930a211110623f8354842d2ea1a961c598a79", features = [
    "ws",
] }
rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7ea0999b59432deb4a07f220", features = [
    "backup",
    "bundled",
    "serialize",
] }

[dev-dependencies]
sdk-common = { workspace = true, features = ["test-utils"] }
paste = "1.0.15"
base64 = "0.22.1"
serial_test = "3.2.0"

# Non-Wasm dev dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
tempdir = "0.3.7"

# Wasm dev dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.33"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.50"
gloo-timers = { version = "0.3.0", features = ["futures"] }
futures = "0.3.31"
console_log = "1.0.0"

[build-dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
glob = "0.3.1"
tonic-build = "^0.8"

# Pin these versions to fix iOS build issues
[target.'cfg(target_os = "ios")'.build-dependencies]
security-framework = "=2.10.0"
security-framework-sys = "=2.10.0"
