[package]
name = "ls-sdk-bindings"
edition = "2021"
version.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "ls_sdk_bindings"
crate-type = ["staticlib", "cdylib", "lib"]


[dependencies]
anyhow = { workspace = true }
ls-sdk = { path = "../ls-sdk-core" }
uniffi = { workspace = true, features = [ "cli" ] }
thiserror = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = [ "build" ] }