[package]
name = "ls-sdk"
edition = "2021"
version.workspace = true

[lib]
name = "ls_sdk"

[dependencies]
anyhow = { workspace = true }
bip39 = { version = "2.0.0", features = ["serde"] }
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "cf2544ae126ac46ab2118313d61a57f160e3d64e" }
log = "0.4.20"
lwk_common = "0.3.0"
lwk_signer = "0.3.0"
lwk_wollet = "0.3.0"
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
rusqlite_migration = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempdir = "0.3.7"
uuid = { version = "1.8.0", features = ["v4"] }
