[package]
name = "breez-sdk-liquid-wasm"
edition = "2021"
version.workspace = true

[lib]
name = "breez_sdk_liquid_wasm"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
breez-sdk-liquid = { path = "../core" }
console_log = "1"
js-sys = "0.3.77"
log = { workspace = true }
sdk-macros = { workspace = true }
serde = { workspace = true }
tsify-next = "0.5.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
