[package]
name = "breez-sdk-liquid-nwc"
edition = "2021"
version = "0.0.1"

[lints]
workspace = true

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
sdk-macros = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
breez-sdk-liquid = { path = "../../core" }
async-trait = "0.1.86"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
tokio_with_wasm = { version = "=0.8.2", features = [
    "macros",
    "rt",
    "sync",
    "time",
] }
nostr-sdk = { version = "0.43.0", features = ["nip44", "nip47"] }

# Non-Wasm dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
uuid = { version = "1.8.0", features = ["v4"] }

# Wasm dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
uuid = { version = "1.8.0", features = ["v4", "js"] }
