[package]
name = "bindings-react-native"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.25.2", features = ["bindgen-tests", "cli"] }
uniffi_bindgen = "0.25.2"
uniffi_macros = "0.25.2"
camino = "1.1.1"
log = { workspace = true }
serde = "*"
askama = { version = "0.12", default-features = false, features = ["config"] }
toml = "0.5"
clap = { version = "3.2.22", features = ["derive"] }
heck = "0.4"
paste = "1.0"
once_cell = { workspace = true }

[build-dependencies]
uniffi_build = { version = "0.25.2" }
uniffi_bindgen = "0.25.2"
anyhow = { version = "1.0.57", features = ["backtrace"] }
