[package]
name = "bindings-react-native"
version = "0.4.0-rc3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uniffi = { workspace = true, features = ["bindgen-tests", "cli"] }
uniffi_bindgen = { workspace = true }
uniffi_macros = { workspace = true }
camino = "1.1.1"
log = { workspace = true }
serde = "*"
askama = { version = "0.12", default-features = false, features = ["config"] }
toml = "0.5"
clap = { version = "3.2.22", features = ["derive"] }
heck = "0.4"
paste = "1.0"
once_cell = { workspace = true }
textwrap = "0.16"
regex = "1.11.0"

[build-dependencies]
uniffi_build = { workspace = true }
uniffi_bindgen = { workspace = true }
anyhow = { version = "1.0.57", features = ["backtrace"] }
